# chat-application

term-client/: Cargo.toml
webserver/: .gitignore  Cargo.toml  diesel.toml
webserver/migrations/2024-06-02-014427_initial_migration/: down.sql  up.sql
webserver/solid-frontend/: package-lock.json  package.json  vite.config.ts
webserver/solid-frontend/src/: App.tsx  Home.tsx  index.tsx
webserver/solid-frontend/src/chat/: Page.tsx
webserver/solid-frontend/src/rooms/: Page.tsx
webserver/src/: errors.rs  main.rs  schema.rs
webserver/src/handlers/: chat.rs
webserver/src/models/: app_state.rs  message.rs  mod.rs  room.rs
