[package]
name = "chat-application"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2", "macros", "multipart"] }
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
