[package]
name = "chat-application"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2", "macros", "multipart"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenv = "0.15.0"
futures = "0.3.30"
google-oauth = "1.11.0"
jsonwebtoken = "9.3.0"
openidconnect = "3.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
